# SimVex

./: .gitignore  .gitmodules  README.md
Parts/: part_index.json
RobotBuilder/Builder/: CMakeLists.txt
RobotBuilder/Builder/documentation/: Doxyfile
RobotBuilder/Builder/documentation/html/: BACKENDS_8md.html  CONTRIBUTING_8md.html  EXAMPLES_8md.html  FAQ_8md.html  FONTS_8md.html  annotated.html  binary__to__compressed__c_8cpp.html  binary__to__compressed__c_8cpp__incl.map  binary__to__compressed__c_8cpp__incl.md5  categoryAppViewController_07_08-members.html  categoryAppViewController_07_08.html  categoryAppViewController_07_08__coll__graph.map  categoryAppViewController_07_08__coll__graph.md5  categoryAppViewController_07_08__inherit__graph.map  categoryAppViewController_07_08__inherit__graph.md5  categoryNSCursor_07_08-members.html  categoryNSCursor_07_08.html  categoryNSCursor_07_08__coll__graph.map  classImDrawIdx_01_5.html  classImDrawIdx_01_5__coll__graph.map  classImDrawIdx_01_5__coll__graph.md5  classImGuiID_01_5.html  classImGuiID_01_5__coll__graph.map  classImGuiID_01_5__coll__graph.md5  classImGuiTableColumnIdx_01_5.html  classImGuiTableColumnIdx_01_5__coll__graph.map  classImTextureID_01_5.html  classImTextureID_01_5__coll__graph.map  classImU32_01_5.html  classImU32_01_5__coll__graph.map  classImWchar_01_5.html  classImWchar_01_5__coll__graph.map  classNSApplicationDelegate-p.html  classNSApplicationDelegate-p__coll__graph.map  classNSApplicationDelegate-p__coll__graph.md5  classNSApplicationDelegate-p__inherit__graph.map  classNSApplicationDelegate-p__inherit__graph.md5  classNSCopying-p.html  classNSCopying-p__coll__graph.map  classNSCopying-p__coll__graph.md5  (+1979 more)
RobotBuilder/Builder/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  (+74 more)
RobotBuilder/Builder/documentation/latex/: BACKENDS_8md.tex  CONTRIBUTING_8md.tex  EXAMPLES_8md.tex  FAQ_8md.tex  FONTS_8md.tex  annotated.tex  binary__to__compressed__c_8cpp.tex  binary__to__compressed__c_8cpp__incl.md5  categoryAppViewController_07_08.tex  categoryAppViewController_07_08__coll__graph.md5  categoryAppViewController_07_08__inherit__graph.md5  categoryNSCursor_07_08.tex  categoryNSCursor_07_08__coll__graph.md5  classImDrawIdx_01_5.tex  classImGuiID_01_5.tex  classImGuiTableColumnIdx_01_5.tex  classImGuiTableColumnIdx_01_5__coll__graph.md5  classImTextureID_01_5.tex  classImTextureID_01_5__coll__graph.md5  classImU32_01_5.tex  classImU32_01_5__coll__graph.md5  classImWchar_01_5.tex  classImWchar_01_5__coll__graph.md5  classNSApplicationDelegate-p.tex  classNSApplicationDelegate-p__inherit__graph.md5  classNSCopying-p.tex  classNSCopying-p__inherit__graph.md5  classNSObject.tex  classNSObject__inherit__graph.md5  classNSOpenGLView.tex  classNSOpenGLView__inherit__graph.md5  classNSTextInputClient-p.tex  classNSTextInputClient-p__inherit__graph.md5  classNSView.tex  classNSView__coll__graph.md5  classNSView__inherit__graph.md5  classNSWindow.tex  classNSWindow__inherit__graph.md5  classPartDefinition.tex  classPartInstance.tex  (+795 more)
RobotBuilder/Builder/include/: gfx_util.hpp  image_load.hpp  model.hpp  part_catalog.h  part_definition.hpp  part_instance.hpp  ui.hpp
RobotBuilder/Builder/src/: gfx_util.cpp  image_load.cpp  main.cpp  model.cpp  part_catalog.cpp  part_definition.cpp  part_instance.cpp  ui.cpp
RobotBuilder/Builder/src/shaders/: obj.frag  obj.vert
sdk/sim_vexv5/: .gitignore  CMakeLists.txt  makefile  mmmmakefile.txt  units.disasm  user.disasm
sdk/sim_vexv5/include/: all.h  v5.h  v5_api.h  v5_apiprivate.h  v5_apitypes.h  v5_apiuser.h  v5_cpp.h  v5_vcs.h  vex_brain.h  vex_color.h  vex_competition.h  vex_console.h  vex_controller.h  vex_device.h  vex_distance.h  vex_drivetrain.h  vex_event.h  vex_global.h  vex_imu.h  vex_mevent.h  vex_motor.h  vex_optical.h  vex_rotation.h  vex_smartdrive.h  vex_task.h  vex_timer.h  vex_triport.h  vex_units.h  vex_vision.h
sdk/sim_vexv5/include/sim/: 3d_model.h  controller.h  events.h  physics.h  render_common.h  robot_model.h  sim.h  terminal.h  time.h  urdf_loader.h  util.h
sdk/sim_vexv5/include/sim/graphics/: brain_screen.h  embedded_font.h  render_common.h  renderer.h  sim_brain.h  skybox.h  ui.h  window.h
sdk/sim_vexv5/include/sim/graphics/brain_fonts/: font_common.h  noto_sans_mono_12.h  noto_sans_mono_15.h  noto_sans_mono_20.h  noto_sans_mono_30.h  noto_sans_mono_40.h  noto_sans_mono_50.h  noto_sans_mono_60.h
sdk/sim_vexv5/include/sim/graphics/images/: image.h
sdk/sim_vexv5/media/Models/: MotorTexture.xcf  V5 Smart Motor (276-4840).mtl  cheese_puff.blend  field.xml  mjmodel.xml  mymodel.xml  mymodel.xml.bak2
sdk/sim_vexv5/media/Models/Aluminum/: 1_2_25_aluminum.dae  1_2_35_aluminum.dae  1_by_2_25.json  1_by_2_25.msh  1_by_2_25.mtl  1_by_2_35.msh
sdk/sim_vexv5/media/Models/Creation/Aluminum/: 1_by_2_parametric.blend
sdk/sim_vexv5/media/Models/Examples/: obj2msh.py  over_under_field_flat.msh  over_under_field_flat.mtl
sdk/sim_vexv5/otherInclude/: replacement.h
sdk/sim_vexv5/src/: v5_api.cpp  v5_apitypes.cpp  v5_apiuser.cpp  vex_brain.cpp  vex_color.cpp  vex_competition.cpp  vex_controller.cpp  vex_device.cpp  vex_global.cpp  vex_imu.cpp  vex_mevent.cpp  vex_motor.cpp  vex_motorgroup.cpp  vex_optical.cpp  vex_rotation.cpp  vex_task.cpp  vex_thread.cpp  vex_timer.cpp  vex_triport.cpp  vex_units.cpp  vex_vision.cpp
sdk/sim_vexv5/src/sim/: 3d_model.cpp  controller.cpp  events.cpp  phyiscs.cpp  physics.cpp  robot_model.cpp  sim.cpp  terminal.cpp  time.cpp  urdf_loader.cpp  util.cpp
sdk/sim_vexv5/src/sim/graphics/: brain_screen.cpp  render_common.cpp  renderer.cpp  sim_brain.cpp  skybox.cpp  ui.cpp  window.cpp
(+947 files in other folders)
